--- a/everest.yaml
+++ b/everest.yaml
@@ -4,3 +4,8 @@
   Dependencies:
     - Name: EverestCore
       Version: 1.4673.0
+  OptionalDependencies:
+    - Name: SpeedrunTool
+      Version: 3.22.0
+    - Name: GravityHelper
+      Version: 1.2.0
