--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,7 @@ MigrationBackup/
 # JetBrains Rider
 .idea
 
+Effects/Microsoft.Xna.Framework.Content.Pipeline.dll
+Effects/Microsoft.Xna.Framework.Content.Pipeline.EffectImporter.dll
+Effects/ShaderCompiler.exe
+Effects/ShaderCompiler.exe.config
