--- a/Source/MotionSmoothing.csproj
+++ b/Source/MotionSmoothing.csproj
@@ -50,6 +50,7 @@
         <Copy SourceFiles="..\bin\MotionSmoothing.pdb" DestinationFolder="$(CelestePrefix)\Mods\MotionSmoothing\bin" />
         <Copy SourceFiles="..\Dialog\English.txt" DestinationFolder="$(CelestePrefix)\Mods\MotionSmoothing\Dialog" />
         <Copy SourceFiles="..\Effects\HiresGaussianBlur.cso" DestinationFolder="$(CelestePrefix)\Mods\MotionSmoothing\Effects" />
+        <Copy SourceFiles="..\Effects\HiresDistort.cso" DestinationFolder="$(CelestePrefix)\Mods\MotionSmoothing\Effects" />
     </Target>
 
     <Target Name="PackageMod" AfterTargets="CopyFiles" Inputs="$(ZippedFiles)" Outputs="..\MotionSmoothing.zip" Condition="'$(Configuration)' == 'Release'">
