Tinkering with hooking SpriteBatch.Draw

--- a/.gitignore
+++ b/.gitignore
@@ -359,3 +359,4 @@ Effects/Microsoft.Xna.Framework.Content.Pipeline.dll
 Effects/Microsoft.Xna.Framework.Content.Pipeline.EffectImporter.dll
 Effects/ShaderCompiler.exe
 Effects/ShaderCompiler.exe.config
+.vscode/settings.json
