--- a/Source/MotionSmoothing.csproj
+++ b/Source/MotionSmoothing.csproj
@@ -6,7 +6,7 @@
         <LangVersion>latest</LangVersion>
         <CelestePrefix Condition="'$(CelestePrefix)' == '' And Exists('..\..\..\Celeste.dll')">..\..\..</CelestePrefix>
         <CelestePrefix Condition="'$(CelestePrefix)' == ''">lib-stripped</CelestePrefix>
-        <ZippedFiles>..\everest.yaml;..\bin\**\*.*;..\Audio\**\*.*;..\Dialog\**\*.*;..\Graphics\**\*.*;..\Ahorn\**\*.*;..\Loenn\**\*.*</ZippedFiles>
+        <ZippedFiles>..\everest.yaml;..\bin\**\*.*;..\Audio\**\*.*;..\Dialog\**\*.*;..\Graphics\**\*.*;..\Effects\**\*.*;..\Ahorn\**\*.*;..\Loenn\**\*.*</ZippedFiles>
         <PackageId>MotionSmoothing</PackageId>
     </PropertyGroup>
 
