--- a/everest.yaml
+++ b/everest.yaml
@@ -1,5 +1,5 @@
 - Name: MotionSmoothing
-  Version: 1.3.1
+  Version: 1.3.2
   DLL: bin/MotionSmoothing.dll
   Dependencies:
     - Name: EverestCore
@@ -13,3 +13,5 @@
       Version: 1.2.0
     - Name: SpirialisHelper
       Version: 1.0.8
+    - Name: ExtendedCameraDynamics
+      Version: 1.1.2
