--- a/everest.yaml
+++ b/everest.yaml
@@ -15,3 +15,5 @@
       Version: 1.0.8
     - Name: ExtendedCameraDynamics
       Version: 1.1.2
+    - Name: ExtendedVariantMode
+      Version: 0.47.6
